--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "vue-html-bridge",
-  "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "",
-  "type": "module",
-  "main": "index.js",
+  "name": "vue-html-bridge-monorepo",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "devDependencies": {
-    "@babel/parser": "^7.28.6",
     "@types/node": "^25.0.9",
-    "@vue/compiler-dom": "^3.5.27",
-    "@vue/compiler-sfc": "^3.5.27",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
