--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
   "name": "vue-html-bridge-monorepo",
+  "type": "module",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/core",
+    "packages/cli",
+    "packages/markuplint",
+    "packages/markuplint/vscode"
   ],
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "build:all": "npm run build -w @vue-html-bridge/core && npm run build -w @vue-html-bridge/cli && npm run build -w @vue-html-bridge/markuplint && npm run compile -w @vue-html-bridge/vscode",
+    "build:vscode": "npm run compile -w @vue-html-bridge/vscode",
+    "clean:all": "rm -rf packages/*/dist packages/*/*/dist packages/*/tsconfig.tsbuildinfo packages/*/*/tsconfig.tsbuildinfo",
+    "lint": "eslint 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'",
+    "lint:fix": "eslint 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts' --fix",
+    "format": "prettier --write 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'",
+    "format:check": "prettier --check 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
+    "eslint": "^9.18.0",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.21.0",
     "vitest": "^4.0.17"
+  },
+  "dependencies": {
+    "vscode-languageserver-textdocument": "^1.0.12"
   }
 }
