--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "@babel/parser": "^7.28.6",
+    "@prettier/sync": "^0.5.2",
     "@vue/compiler-dom": "^3.5.27",
-    "@vue/compiler-sfc": "^3.5.27"
+    "@vue/compiler-sfc": "^3.5.27",
+    "prettier": "^3.5.3"
+  },
+  "devDependencies": {
+    "@babel/types": "^7.28.6"
   }
 }
