--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
-    "build:all": "npm run build -w @vue-html-bridge/core && npm run build -w @vue-html-bridge/cli && npm run build -w @vue-html-bridge/markuplint && npm run compile -w @vue-html-bridge/vscode",
-    "build:vscode": "npm run compile -w @vue-html-bridge/vscode",
+    "build:all": "npm run build -w vue-html-bridge-core && npm run build -w vue-html-bridge-cli && npm run build -w vue-html-bridge-markuplint && npm run compile -w vue-html-bridge-vscode",
+    "build:vscode": "npm run compile -w vue-html-bridge-vscode",
     "clean:all": "rm -rf packages/*/dist packages/*/*/dist packages/*/tsconfig.tsbuildinfo packages/*/*/tsconfig.tsbuildinfo",
     "lint": "eslint 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'",
     "lint:fix": "eslint 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts' --fix",
     "format": "prettier --write 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'",
-    "format:check": "prettier --check 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'"
+    "format:check": "prettier --check 'packages/*/src/**/*.ts' 'packages/*/*/src/**/*.ts'",
+    "publish:dry-run": "npm publish --dry-run -w vue-html-bridge-core && npm publish --dry-run -w vue-html-bridge-cli && npm publish --dry-run -w vue-html-bridge-markuplint",
+    "publish:all": "npm publish -w vue-html-bridge-core && npm publish -w vue-html-bridge-cli && npm publish -w vue-html-bridge-markuplint"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
